Removes depreciated -XX:+AggressiveOps and alternate config